--- a/build-tools/Project.toml
+++ b/build-tools/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 Franklin = "713c75ef-9fc9-4b05-94a9-213340da978e"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
 Franklin = "=0.6.12"
